--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Follio - Multipurpose Portfolio React Template</title>
+    <title>Follio</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <!--[if IE]>
     This browser is internet explorer (any version)
@@ -269,14 +269,14 @@
                     <p class="testimonial-box__name">JOHN HARRY</p>
                     <p class="testimonial-box__desc">CEO of Moderntern Technology</p>
                 </div>
-                <!-- <div class="testimonial--scroll-btn">
+                <div class="testimonial--scroll-btn">
                     <button class="scroll-btn">
                         <i class="fas fa-chevron-circle-left"></i>
                     </button>
                     <button class="scroll-btn">
                         <i class="fas fa-chevron-circle-right"></i>
                     </button>
-                </div> -->
+                </div>
             </div>
 
 
@@ -287,14 +287,14 @@
             <div class="grid wide">
                 <h1 class="letstalk--title">Let's Talk</h1>
                 <div class="row">
-                    <div class="col l-o-1 l-6 m-12">
+                    <div class="col l-o-1 l-6 m-12 c-12">
                         <div class="card__modal">
-                            <h2 style="text-align: center;" class="modal--title">Get In Touch</h2>
+                            <h2 class="modal--title">Get In Touch</h2>
                             <div class="row">
-                                <div class="col l-6">
+                                <div class="col l-6 m-12 c-12">
                                     <input type="text" class="card--input" placeholder="Name">
                                 </div>
-                                <div class="col l-6">
+                                <div class="col l-6 m-12 c-12">
                                     <input type="text" class="card--input" placeholder="Lastname">
                                 </div>
                             </div>
@@ -307,7 +307,7 @@
                         
                     </div>  
 
-                    <div class="col l-5">
+                    <div class="col l-5 m-12 c-12">
                         <div class="card__item">
                             <h2 class="card--title">25 North Street, Dubai</h2>
                             <div class="card--info">
