--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <header id="wrapper" style="background: url(./img/wrapper/wrapper-bg.png) no-repeat right / contain" >
         <div class="header">
             <div class="grid wide flexible">
-                <img class="header__logo" src="./img/wrapper/header/follio-logo.png" alt="Follio Logo">
+                <a href="#" class="">
+                    <img class="header__logo" src="./img/wrapper/header/follio-logo.png" alt="Follio Logo">
+                </a>
                 <input type="checkbox" hidden name="" id="header__nav-bar-mobile">
 
                 <div class="header__nav-bar">
