--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="header__nav-bar">
                         <ul class="header__nav-bar--list">
                             <li class="header__nav-bar--item">
-                                <a class="header__nav-bar--link" href="#">Home</a>
+                                <a class="header__nav-bar--link" href="https://hdang09.github.io/follio-2/">Home</a>
                                 <ul class="header__nav-bar--subnav">
                                     <li class="header__subnav--item">
                                         <a href="#" style="color: var(--primary-color); " class="header__subnav--item-link">Home</a> 
