--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <header id="wrapper" style="background: url(./img/wrapper/wrapper-bg.png) no-repeat right" >
             <div class="header">
                 <div class="grid wide flexible">
-                    <a href="#" class="">
+                    <a href="https://hdang09.github.io/follio-2/" class="">
                         <img class="header__logo" src="./img/wrapper/header/follio-logo.png" alt="Follio Logo">
                     </a>
                     <input type="checkbox" hidden name="" id="header__nav-bar-mobile">
